<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (c) 2017 The LineageOS Project

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 Also add information on how to contact you by electronic and paper mail.

-->

<resources>
    <string name="app_name">FlipFlap</string>
    <string name="loading_indicator">Loading widget\u2026</string>

    <!-- Formating strings for widget clock -->
    <string name="widget_12_hours_format_h" translatable="false">h</string>
    <string name="widget_12_hours_format_no_ampm_m" translatable="false">:mm</string>
    <string name="widget_12_hours_format_m" translatable="false">:mm<font size="15">aa</font></string>
    <string name="widget_12_hours_format_ampm" translatable="false">a</string>

    <!-- java.text.SimpleDateFormat uses H for hours in the 0-23 range and
         android.text.format.DateFormat uses k for hours in the 0-23 range.
         We need to support both -->
    <string name="widget_24_hours_format_h" translatable="false">kk</string>
    <string name="widget_24_hours_format_h_api_16" translatable="false">HH</string>
    <string name="widget_24_hours_format_m" translatable="false">:mm</string>

    <!-- String matching the lock screen format for displaying the date. -->
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <!-- Format for describing the date, for accessibility. -->
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>

    <!-- Strings for the Settings -->
    <string name="settings_name">Flip cover</string>

    <string name="category_behaviour">Behaviour</string>
    <string name="pass_to_security_view_title">Directly go to password entry</string>
    <string name="pass_to_security_view_summary">Opening the case directly shows lock screen</string>

    <string name="category_design">Design</string>
    <string name="switch_charging_status_title">Show charging status</string>
    <string name="switch_charging_status_summary">Change color depending on the current battery charge</string>

    <string name="category_timeouts">Timeouts</string>
    <string name="timeout_plugged_title">While charging</string>
    <string name="timeout_unplugged_title">Unplugged</string>
    <string name="timeout_summary">Display the cover app for %s after closing the lid</string>
    <string name="timeout_summary_never">After closing the lid, the cover app will always stay on</string>

    <string name="timeout_entry_5s">5s</string>
    <string name="timeout_entry_10s">10s</string>
    <string name="timeout_entry_30s">30s</string>
    <string name="timeout_entry_1min">1min</string>
    <string name="timeout_entry_5min">5min</string>
    <string name="timeout_entry_never">Never</string>
</resources>
